helloworld/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld
  namespace: fou

  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: hello.fou.test
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld
          servicePort: http

  - host: fou.test
    http:
      paths:
      - path: /hello
        backend:
          serviceName: helloworld
          servicePort: http
